--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#1F8723</color>
+    <color name="purple_200">#1D7A21</color>
     <color name="purple_500">#76bf5e</color>
     <color name="purple_700">#00574B</color>
     <color name="teal_200">#FF03DAC5</color>
